--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "sass-node": "^4.11.2",
+        "typescript": "^4.3.4",
         "web-vitals": "^1.1.1"
     },
     "scripts": {
@@ -43,6 +44,7 @@
         ]
     },
     "devDependencies": {
+        "@types/react-router-dom": "^5.1.7",
         "gh-pages": "^3.1.0"
     }
 }
